# YoloSAM_Deploy

./: .gitignore  .gitmodules  02_annotation.py  03_train.py  04_convert.py  05_inference.py  05_yolo_inference_mnn.py  06_mnn_inference.py  06_sam_inference.py  06_sam_inference_mnn.py  06_sam_inference_onnx.py  07_sam_inference.py  README.md  requirements.txt
benchmark/: README.md  benchmark.sh
clutters/: point_annotator.py
interface/: CMakeLists.txt  Interface description.md
interface/include/: detector.h
interface/src/: detector.cc  main.cc
models/: README.md
scripts/data_process/: crawl.py  create_dataset.py  rename_chinese2pinyin.py
scripts/detect/: 01_eval.py  02_convert.py  03_mnn_eval.py
scripts/segment/: 01_eval.py  02_convert.py  03_mnn_eval.py
sdk/: CMakeLists.txt  README.md  sdk_build_guide.md
sdk/examples/: demo_det.cc  demo_seg.cc
sdk/include/: detector.h  segmentor.h
sdk/src/: detector.cc  segmentor.cc
